简化 docx4j 字体处理逻辑